--- a/raspberry/windows-iot/MetecDriver/MetecDriverLibrary/MetecDriverLibrary.vcxproj.filters
+++ b/raspberry/windows-iot/MetecDriver/MetecDriverLibrary/MetecDriverLibrary.vcxproj.filters
@@ -1,25 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Common">
-      <UniqueIdentifier>4deed3c6-557e-42c7-a2d3-27cd41047f8d</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Assets">
-      <UniqueIdentifier>99c7a81c-6aa3-45fd-a164-9a8160862d7c</UniqueIdentifier>
-      <Extensions>bmp;fbx;gif;jpg;jpeg;tga;tiff;tif;png</Extensions>
+    <Filter Include="Resources">
+      <UniqueIdentifier>5c5efcdf-f03b-4378-80cb-aa193a1a336c</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tga;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="pch.cpp" />
     <ClCompile Include="..\..\..\..\src\braille.cpp" />
-    <ClCompile Include="..\..\..\..\src\pch.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\include\pch.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <AppxManifest Include="Package.appxmanifest" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="MetecDriverLibrary_TemporaryKey.pfx" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
 </Project>
