--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,3 @@
-# For PCBs designed using KiCad: http://www.kicad-pcb.org/
-# Format documentation: http://kicad-pcb.org/help/file-formats/
-
-# Temporary files
-*.000
-*.bak
-*.bck
-*.kicad_pcb-bak
-*~
-_autosave-*
-*.tmp
-*-rescue.lib
-*-save.pro
-*-save.kicad_pcb
-
-# Netlist files (exported from Eeschema)
-*.net
-
-# Autorouter files (exported from Pcbnew)
-*.dsn
-*.ses
-
-# Exported BOM files
-*.xml
-*.csv
 raspberry/linux-wiringpi/out*
 raspberry/linux-wiringpi/CMakeFiles
 raspberry/linux-wiringpi/cmake_install.cmake
@@ -30,10 +5,6 @@ CMakeCache.txt
 raspberry/linux-wiringpi/metadata/braille_driver.pc.in
 *.o
 *.d
-*.png
-raspberry/windows-iot/MetecDriver/.vs
-raspberry/windows-iot/MetecDriver/ARM
-raspberry/windows-iot/MetecDriver/*/ARM
-raspberry/windows-iot/MetecDriver/*/bin/ARM
-raspberry/windows-iot/MetecDriver/*/obj/ARM
-raspberry/windows-iot/MetecDriver/*/obj
+.vs
+ARM
+obj
