:rocket: create nugget config

--- a/raspberry/windows-iot/MetecDriver/MetecDriverLibrary/MetecDriverLibrary.vcxproj
+++ b/raspberry/windows-iot/MetecDriver/MetecDriverLibrary/MetecDriverLibrary.vcxproj
@@ -155,6 +155,7 @@
       <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
       <DisableSpecificWarnings>28204</DisableSpecificWarnings>
       <AdditionalIncludeDirectories>$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories);..\..\..\..\include</AdditionalIncludeDirectories>
+      <GenerateXMLDocumentationFiles>true</GenerateXMLDocumentationFiles>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
