add raspberry-dev + auto download liblouis during build

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "arduino/arduino-makefile"]
 	path = arduino/arduino-makefile
 	url = git://github.com/bertrandmartel/arduino-makefile.git
+[submodule "raspberry/linux-wiringpi/raspberry-dev"]
+	path = raspberry/linux-wiringpi/raspberry-dev
+	url = git://github.com/bertrandmartel/raspberry-dev.git
