--- a/raspberry/linux-wiringpi/CMakeLists.txt
+++ b/raspberry/linux-wiringpi/CMakeLists.txt
@@ -25,7 +25,7 @@ message(FATAL_ERROR "wiringPi library not found")
 endif()
 
 #link liblouis
-set (LIBLOUIS_PATH ../liblouis/liblouis/.libs)
+set (LIBLOUIS_PATH ./liblouis/liblouis/.libs)
 find_library(LOUIS_LIB louis HINTS ${LIBLOUIS_PATH} NO_CMAKE_FIND_ROOT_PATH)
 if(NOT LOUIS_LIB)
 message(FATAL_ERROR "liblouis library not found")
@@ -45,5 +45,5 @@ foreach( testsourcefile ${EXAMPLES_SRC} )
     target_link_libraries(${base_name} ${LOUIS_LIB})
     target_link_libraries( ${base_name} metecdriver )
     target_include_directories(${base_name} PUBLIC ../../include)
-    target_include_directories(${base_name} PUBLIC ../liblouis/liblouis)
+    target_include_directories(${base_name} PUBLIC ./liblouis/liblouis)
 endforeach( testsourcefile ${EXAMPLES_SRC} )
